2009-07-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/content/calendar-ui-utils.js: extracted file
	for further modification
	(appendCalendarItems) add a "tooltiptext" to the calendar menu
	items for large calendar names.

	* src/calendar/base/content/sun-calendar-event-dialog.xul: (new
	file) assigned "id" field and value to the status bar privacy
	labels.

2009-07-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: it may happen that ACL
	are loaded before the refresh starts. In that case, we used to
	wait indefinitely for the a notification that has already passed.
	This is now fixed.

	* src/calendar/base/content/calendar-task-editing.js: check the
	value of getSelectedCalendar() to avoid exceptions on null values.

2009-07-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: webdav sync handler: we
	trigger the "endBatch" event BEFORE the finalization of the
	update to avoid locking problems in the cache database.
	Also, we don't need to test for the presence of the
	changeLogListener in the mACLRefreshData ivar, only for the ivar
	itself.
	The acl manager is only instantiated once, we can thus use it later
	as indicator to whether it is available or not. We also allow
	write access to calendars without ACL support.

	* src/calendar/providers/composite/calCompositeCalendar.js
	(getItems): instead of testing each calendar to see whether it's
	ready, we only take the "readyCalendars" into account. This
	enables views to receive an onOperationComplete event when no
	calendar is available yet.
	(calCompositeGetListenerHelper): the amount of pending requests
	depends on the amount of enabled calendars that are declared ready.
	(readyCalendars): new accessor that returns the amount of enabled
	calendars that are declared ready.

2009-07-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/base/src/calDavCalendar.js: the observe method was