@@ -1,3 +1,9 @@
+2009-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* src/calendar/lightning/content/imip-bar.js: make better use of
+	the CalDAV acls. Ensure the calendars are updated before searching
+	the related event.
+
 2009-07-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	* src/calendar/base/content/calendar-ui-utils.js: extracted file
